synchronous gin-init
