# es_backend/docs/swagger.yaml
@@ -1,60 +1,5 @@
 definitions:
-  es_backend_api_v1.GetProfileResponse:
-    properties:
-      code:
-        type: integer
-      data:
-        $ref: '#/definitions/es_backend_api_v1.GetProfileResponseData'
-      message:
-        type: string
-    type: object
-  es_backend_api_v1.GetProfileResponseData:
-    properties:
-      nickname:
-        example: alan
-        type: string
-      uuid:
-        type: integer
-    type: object
-  es_backend_api_v1.LoginRequest:
-    properties:
-      email:
-        example: 1234@gmail.com
-        type: string
-      password:
-        example: "123456"
-        type: string
-    required:
-    - email
-    - password
-    type: object
-  es_backend_api_v1.LoginResponse:
-    properties:
-      code:
-        type: integer
-      data:
-        $ref: '#/definitions/es_backend_api_v1.LoginResponseData'
-      message:
-        type: string
-    type: object
-  es_backend_api_v1.LoginResponseData:
-    properties:
-      access_token:
-        type: string
-    type: object
-  es_backend_api_v1.RegisterRequest:
-    properties:
-      email:
-        example: 1234@gmail.com
-        type: string
-      password:
-        example: "123456"
-        type: string
-    required:
-    - email
-    - password
-    type: object
-  es_backend_api_v1.Response:
+  es_backend_api_v1.BaseResponse:
     properties:
       code:
         type: integer
@@ -62,16 +7,129 @@ definitions:
       message:
         type: string
     type: object
-  es_backend_api_v1.UpdateProfileRequest:
+  es_backend_api_v1.CreatePostRequest:
+    properties:
+      content:
+        type: string
+      favour_num:
+        type: integer
+      tags:
+        type: string
+      thumb_num:
+        type: integer
+      title:
+        type: string
+      uuid:
+        type: integer
+    type: object
+  es_backend_api_v1.GetProfileResponse:
+    properties:
+      avatar:
+        type: string
+      email:
+        type: string
+      profile:
+        type: string
+      username:
+        type: string
+      uuid:
+        type: integer
+    type: object
+  es_backend_api_v1.ListPostRequest:
+    properties:
+      limit:
+        type: integer
+      list_all:
+        type: boolean
+      offset:
+        type: integer
+      order_by:
+        items:
+          type: string
+        type: array
+    type: object
+  es_backend_api_v1.ListPostResponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/es_backend_internal_model_model_type.Post'
+        type: array
+      limit:
+        type: integer
+      offset:
+        type: integer
+      total:
+        type: integer
+    type: object
+  es_backend_api_v1.LoginRequest:
+    properties:
+      name:
+        type: string
+      password:
+        type: string
+    required:
+    - name
+    - password
+    type: object
+  es_backend_api_v1.LoginResponse:
+    properties:
+      access_token:
+        type: string
+    type: object
+  es_backend_api_v1.RegisterRequest:
     properties:
       email:
-        example: 1234@gmail.com
         type: string
-      nickname:
-        example: alan
+      password:
+        type: string
+      username:
         type: string
     required:
     - email
+    - password
+    - username
+    type: object
+  es_backend_api_v1.UpdateProfileRequest:
+    properties:
+      email:
+        type: string
+      profile:
+        type: string
+      username:
+        type: string
+      uuid:
+        type: integer
+    type: object
+  es_backend_internal_model_model_type.Post:
+    properties:
+      content:
+        type: string
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      favourNum:
+        type: integer
+      id:
+        type: integer
+      tags:
+        type: string
+      thumbNum:
+        type: integer
+      title:
+        type: string
+      updatedAt:
+        type: string
+      uuid:
+        type: integer
+    type: object
+  gorm.DeletedAt:
+    properties:
+      time:
+        type: string
+      valid:
+        description: Valid is true if Time is not NULL
+        type: boolean
     type: object
 host: localhost:8000
 info:
@@ -126,7 +184,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/es_backend_api_v1.Response'
+            $ref: '#/definitions/es_backend_api_v1.BaseResponse'
       summary: 用户注册
       tags:
       - 用户模块
@@ -162,12 +220,60 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/es_backend_api_v1.Response'
+            $ref: '#/definitions/es_backend_api_v1.BaseResponse'
       security:
       - Bearer: []
       summary: 修改用户信息
       tags:
       - 用户模块
+  /v1/post/create:
+    post:
+      consumes:
+      - application/json
+      description: 创建帖子信息
+      parameters:
+      - description: params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/es_backend_api_v1.CreatePostRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/es_backend_api_v1.BaseResponse'
+      security:
+      - Bearer: []
+      summary: 创建帖子信息
+      tags:
+      - 帖子模块
+  /v1/post/list:
+    post:
+      consumes:
+      - application/json
+      description: 列出帖子信息
+      parameters:
+      - description: params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/es_backend_api_v1.ListPostRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/es_backend_api_v1.ListPostResponse'
+      security:
+      - Bearer: []
+      summary: 列出帖子信息
+      tags:
+      - 帖子模块
 securityDefinitions:
   Bearer:
     in: header
